versions/v3.7.0/doxygen/html/globals_x.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/doxygen/html/globals_x.html
original_path: doxygen/html/globals_x.html
---

| Logo | Zephyr API Documentation  3.7.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all functions, variables, defines, enums, and typedefs with links to the files they belong to:

### - x -

- X86\_APIC\_BASE\_MSR : [msr.h](msr_8h.md#a0083758907f732a480f8a9ec2ccb3778)
- X86\_APIC\_BASE\_MSR\_X2APIC : [msr.h](msr_8h.md#a940221ed627aad8120e2abb0c12ff196)
- X86\_EFER\_MSR : [msr.h](msr_8h.md#a4226ff6b5ecc23277e9cb0433b0d6c22)
- X86\_EFER\_MSR\_LME : [msr.h](msr_8h.md#a4484482d4a9eee0288970fb8a6fc70f5)
- X86\_EFER\_MSR\_NXE : [msr.h](msr_8h.md#a410a6e81d01226d399b8e24d5506013d)
- X86\_EFER\_MSR\_SCE : [msr.h](msr_8h.md#ae20fe7661b62a20885d6cef7f83e917e)
- X86\_FMASK\_MSR : [msr.h](msr_8h.md#af28b1c23c69f1658384a5de5b9461c64)
- X86\_FS\_BASE : [msr.h](msr_8h.md#a935167aeb9bc9b1f4e73d8001c3c72f0)
- X86\_FXSAVE\_ALIGN : [thread.h](arch_2x86_2intel64_2thread_8h.md#a7a6607831b2b148ce38e7715907ef31c)
- X86\_FXSAVE\_SIZE : [thread.h](arch_2x86_2intel64_2thread_8h.md#ace21a6c2662fc989b5a51a2ebb53d129)
- X86\_GS\_BASE : [msr.h](msr_8h.md#a263e74097e9162fd54f5d05af74f4aa1)
- X86\_KERNEL\_CPU0\_TR : [thread.h](arch_2x86_2intel64_2thread_8h.md#ae5e8af7e75778451925d9a94322c39ab)
- X86\_KERNEL\_CPU1\_TR : [thread.h](arch_2x86_2intel64_2thread_8h.md#a3f7c36aa07ea09dfaedc41d50339d563)
- X86\_KERNEL\_CPU2\_TR : [thread.h](arch_2x86_2intel64_2thread_8h.md#ad706983ae625a525a0ff4d4b5e6f9df4)
- X86\_KERNEL\_CPU3\_TR : [thread.h](arch_2x86_2intel64_2thread_8h.md#a04c092d0b318251a296a9ed64f7b1fa5)
- X86\_KERNEL\_CS : [thread.h](arch_2x86_2intel64_2thread_8h.md#a86a201d2fee57e06985202e366797cee)
- X86\_KERNEL\_CS\_32 : [thread.h](arch_2x86_2intel64_2thread_8h.md#a53141d432cd6d04e0e47c12fa796886c)
- X86\_KERNEL\_DS : [thread.h](arch_2x86_2intel64_2thread_8h.md#aec469f2b32038a8968280fa8aa7b9eeb)
- X86\_KERNEL\_DS\_32 : [thread.h](arch_2x86_2intel64_2thread_8h.md#a71032cef700766c2d1d8661ba26228d1)
- X86\_KERNEL\_GS\_BASE : [msr.h](msr_8h.md#af832b3ce587c52ff9764d42fbd1c1b25)
- X86\_LSTAR\_MSR : [msr.h](msr_8h.md#a64cac416a2f72c129bd8e01fd885aaea)
- x86\_memmap : [memmap.h](memmap_8h.md#a8b8229cdb36bf23f8257958fda84be4b)
- X86\_MEMMAP\_ENTRY\_ACPI : [memmap.h](memmap_8h.md#af5da5d5ee62dc74e3ea4bf1f5db757efaa2f86b365795a0f0fc419121f2bdf417)
- X86\_MEMMAP\_ENTRY\_DEFECTIVE : [memmap.h](memmap_8h.md#af5da5d5ee62dc74e3ea4bf1f5db757efa5e3f2de2b434f036b6fff8aaa63e55dd)
- X86\_MEMMAP\_ENTRY\_NVS : [memmap.h](memmap_8h.md#af5da5d5ee62dc74e3ea4bf1f5db757efa1ec11c2afcb03537e072273a6fbb2e61)
- X86\_MEMMAP\_ENTRY\_RAM : [memmap.h](memmap_8h.md#af5da5d5ee62dc74e3ea4bf1f5db757efae6c7073699a49c3e74fb91c45ea24a0a)
- x86\_memmap\_entry\_type : [memmap.h](memmap_8h.md#af5da5d5ee62dc74e3ea4bf1f5db757ef)
- X86\_MEMMAP\_ENTRY\_UNKNOWN : [memmap.h](memmap_8h.md#af5da5d5ee62dc74e3ea4bf1f5db757efad26cdfad068828bce9185ebb9908b368)
- X86\_MEMMAP\_ENTRY\_UNUSED : [memmap.h](memmap_8h.md#af5da5d5ee62dc74e3ea4bf1f5db757efa7639598e6c11cde301d4aacea99b3fd6)
- x86\_memmap\_exclusions : [memmap.h](memmap_8h.md#ab1723f77a7879fd1cc4723091241d099)
- x86\_memmap\_source : [memmap.h](memmap_8h.md#ae4f3b51d56ed1ddb36a78d0238a8bdc5)
- X86\_MEMMAP\_SOURCE\_DEFAULT : [memmap.h](memmap_8h.md#ae4f3b51d56ed1ddb36a78d0238a8bdc5a68b60d7825f63c9a7f973a5ba63b7fe9)
- X86\_MEMMAP\_SOURCE\_MANUAL : [memmap.h](memmap_8h.md#ae4f3b51d56ed1ddb36a78d0238a8bdc5a4718538763c5b75bb121fdeb8b2b5ffc)
- X86\_MEMMAP\_SOURCE\_MULTIBOOT\_MEM : [memmap.h](memmap_8h.md#ae4f3b51d56ed1ddb36a78d0238a8bdc5a7d9550deb6b27b6c720cbcb7dd48dc63)
- X86\_MEMMAP\_SOURCE\_MULTIBOOT\_MMAP : [memmap.h](memmap_8h.md#ae4f3b51d56ed1ddb36a78d0238a8bdc5a65183e6b869d16a0b1daf4b5d0c9b3f5)
- X86\_MTRR\_DEF\_TYPE\_MSR : [msr.h](msr_8h.md#aa5479ba3ca3bbda70d35819b67d3583f)
- X86\_MTRR\_DEF\_TYPE\_MSR\_ENABLE : [msr.h](msr_8h.md#a2c5d224b53d927e325b710484ebfb2a0)
- X86\_MXCSR\_SANE : [thread.h](arch_2x86_2intel64_2thread_8h.md#a1a95e6241909317576dea666aa1959c9)
- x86\_nr\_memmap\_exclusions : [memmap.h](memmap_8h.md#abb046960eea27faacf7a08d18b9a57eb)
- x86\_read\_loapic() : [loapic.h](loapic_8h.md#a6ba00d305469ab62f89888cf0aa64033)
- x86\_read\_x2apic() : [loapic.h](loapic_8h.md#a797471308f74780dfcec277b18853fca)
- x86\_read\_xapic() : [loapic.h](loapic_8h.md#a4807ae47f62151774877f21939fafeab)
- X86\_RESERVE\_IRQ : [arch.h](x86_2intel64_2arch_8h.md#a7b93ddbf458746ef3d189dfd10888077)
- X86\_SPEC\_CTRL\_MSR : [msr.h](msr_8h.md#ab89835f2b734a80195db70d28749e7c1)
- X86\_SPEC\_CTRL\_MSR\_IBRS : [msr.h](msr_8h.md#aa7de592375a86f19136972a5bd4c8453)
- X86\_SPEC\_CTRL\_MSR\_SSBD : [msr.h](msr_8h.md#aa267e6d482addf97eb630f208281000d)
- X86\_STAR\_MSR : [msr.h](msr_8h.md#a48b0da8dc9cdd319cf75ac0d5933ce0f)
- X86\_STAR\_UPPER : [thread.h](arch_2x86_2intel64_2thread_8h.md#a878f72d5fdb7380968713ef35fa86899)
- X86\_THREAD\_FLAG\_ALL : [thread.h](arch_2x86_2ia32_2thread_8h.md#a9976b965d1010def5c40f40be6930461)
- X86\_THREAD\_FLAG\_EXC : [thread.h](arch_2x86_2ia32_2thread_8h.md#a01b9d81506f2cacafd8b5c1341d30207)
- X86\_THREAD\_FLAG\_INT : [thread.h](arch_2x86_2ia32_2thread_8h.md#adb3b8047e5ebfc1305e7616991913818)
- X86\_TIME\_STAMP\_COUNTER\_MSR : [msr.h](msr_8h.md#a6a8159994070c5d75a390f81ae460dee)
- x86\_tss64\_t : [thread.h](arch_2x86_2intel64_2thread_8h.md#af11b6454439f03e21b92bceff9ed7f00)
- X86\_USER\_CS : [thread.h](arch_2x86_2intel64_2thread_8h.md#a4e231b18c27e74b82d7a1021784cb65d)
- X86\_USER\_CS\_32 : [thread.h](arch_2x86_2intel64_2thread_8h.md#a346cd512e6426a7142790ffc5d8cbbc4)
- X86\_USER\_DS : [thread.h](arch_2x86_2intel64_2thread_8h.md#a5ee9fd539d1fa910dd924bb391566a74)
- x86\_write\_loapic() : [loapic.h](loapic_8h.md#a884390389c9c7cef65801bba00395e4d)
- x86\_write\_x2apic() : [loapic.h](loapic_8h.md#a060a375336bf44c2dde9537d32f9416d)
- x86\_write\_xapic() : [loapic.h](loapic_8h.md#a9d7e889e4e4718d2205f647af172762a)
- X86\_X2APIC\_BASE\_MSR : [msr.h](msr_8h.md#ab5ccd444077064e6b7a399ceb3d61f9f)
- XEC\_GPIO\_HELPER : [microchip-xec-gpio.h](microchip-xec-gpio_8h.md#a69c98ccc691eadd9142b429436324393)
- xen\_add\_to\_physmap\_batch\_t : [memory.h](public_2memory_8h.md#a7d0453db07f6593afa9ea5657ddf8815)
- xen\_add\_to\_physmap\_t : [memory.h](public_2memory_8h.md#afe3890ecc3ae521c121d3bcdf1e4b39b)
- xen\_callback\_t : [arch-arm.h](arch-arm_8h.md#a85d47e7eb51075f257e76067ef337526)
- xen\_console\_init() : [console.h](xen_2console_8h.md#a6e114bd3611c8d2e10541011f0c7c65e)
- xen\_domain\_handle\_t : [xen.h](xen_8h.md#a7be3933d71db9ec81444793055b5d9be)
- XEN\_DOMCTL\_assign\_device : [domctl.h](public_2domctl_8h.md#a5c896cf694ada3f5571e2011fbeb2cdc)
- xen\_domctl\_assign\_dt\_device() : [domctl.h](dom0_2domctl_8h.md#af7888bd31df37d449cde69bc693c244f)
- XEN\_DOMCTL\_audit\_p2m : [domctl.h](public_2domctl_8h.md#a64f85814d96a31362cca48e2220047ad)
- XEN\_DOMCTL\_bind\_pt\_irq : [domctl.h](public_2domctl_8h.md#ac21ffc09b097b8a422680c72242c8019)
- xen\_domctl\_bind\_pt\_irq() : [domctl.h](dom0_2domctl_8h.md#ad5f80dd7c0a7981f8c5c757b06993dc5)
- XEN\_DOMCTL\_cacheflush : [domctl.h](public_2domctl_8h.md#a7385beae0c2a015166962952029fafc9)
- xen\_domctl\_cacheflush() : [domctl.h](dom0_2domctl_8h.md#ad89ece398fc97a94c5c316066e2c29a5)
- XEN\_DOMCTL\_CDF\_hap : [domctl.h](public_2domctl_8h.md#a0850c8d7219c2ae8b1de1a2fab67886a)
- XEN\_DOMCTL\_CDF\_hvm : [domctl.h](public_2domctl_8h.md#a260a9fbe6b758ec5db7e45209cd7dafb)
- XEN\_DOMCTL\_CDF\_iommu : [domctl.h](public_2domctl_8h.md#a5562e6d41cdea2b7bdd4a5b0b7035109)
- XEN\_DOMCTL\_CDF\_MAX : [domctl.h](public_2domctl_8h.md#a7c6f925fdeb64bc84c6e5f18965b4d13)
- XEN\_DOMCTL\_CDF\_nested\_virt : [domctl.h](public_2domctl_8h.md#aa837725af35d2c855080e4c413904457)
- XEN\_DOMCTL\_CDF\_oos\_off : [domctl.h](public_2domctl_8h.md#a4620d4dbc1f5334d4cf2c30edf3904f3)
- XEN\_DOMCTL\_CDF\_s3\_integrity : [domctl.h](public_2domctl_8h.md#a42dd8479fcf148340790bdd3904e421e)
- XEN\_DOMCTL\_CDF\_vpmu : [domctl.h](public_2domctl_8h.md#a7e9c55587080d25fdf1d6fc31030d27f)
- XEN\_DOMCTL\_CDF\_xs\_domain : [domctl.h](public_2domctl_8h.md#aa70feb5d0e5ee56f872fd0e497557b0d)
- XEN\_DOMCTL\_createdomain : [domctl.h](public_2domctl_8h.md#abacb0e860ee863ddfeabbdd14b024fc0)
- xen\_domctl\_createdomain() : [domctl.h](dom0_2domctl_8h.md#a4514a348391808482a064b729bf1baeb)
- XEN\_DOMCTL\_deassign\_device : [domctl.h](public_2domctl_8h.md#abc323304cdd608bf785af6421b05f3ee)
- XEN\_DOMCTL\_debug\_op : [domctl.h](public_2domctl_8h.md#ab86f756fc6cfcb537497de0745b75e53)
- XEN\_DOMCTL\_destroydomain : [domctl.h](public_2domctl_8h.md#a6c9f26d2531a20bffce112302be5196f)
- xen\_domctl\_destroydomain() : [domctl.h](dom0_2domctl_8h.md#aba6a1f6e25ac6ee2a7b0d288ca4ab72d)
- XEN\_DOMCTL\_DEV\_DT : [domctl.h](public_2domctl_8h.md#ac6ed84f27459969a769f558297cee32d)
- XEN\_DOMCTL\_DEV\_PCI : [domctl.h](public_2domctl_8h.md#a1399012c484a27f9ada6f35688d569d6)
- XEN\_DOMCTL\_DEV\_RDM\_RELAXED : [domctl.h](public_2domctl_8h.md#ab297d1aaab40b76132199166663b305b)
- XEN\_DOMCTL\_gdbsx\_domstatus : [domctl.h](public_2domctl_8h.md#ac97072e148e5951b57ec0e730e621d29)
- XEN\_DOMCTL\_gdbsx\_guestmemio : [domctl.h](public_2domctl_8h.md#a1202be0a9604f52b50539e5f44af9c39)
- XEN\_DOMCTL\_gdbsx\_pausevcpu : [domctl.h](public_2domctl_8h.md#a398802362361a5fc1496baaa4b2f3664)
- XEN\_DOMCTL\_gdbsx\_unpausevcpu : [domctl.h](public_2domctl_8h.md#a5edc650c7f3956bf6e1dfb441b393a83)
- XEN\_DOMCTL\_get\_address\_size : [domctl.h](public_2domctl_8h.md#a6d97e86f699b92655c72c182b82f1594)
- XEN\_DOMCTL\_get\_cpu\_policy : [domctl.h](public_2domctl_8h.md#a36432a25f78249e84192ca30f3b9e9e9)
- XEN\_DOMCTL\_get\_device\_group : [domctl.h](public_2domctl_8h.md#a93ab2e12792f16f249bec06a31bcde29)
- XEN\_DOMCTL\_get\_ext\_vcpucontext : [domctl.h](public_2domctl_8h.md#a9f0000d1c3ea8784f2d7ac91ee086243)
- XEN\_DOMCTL\_get\_paging\_mempool\_size : [domctl.h](public_2domctl_8h.md#a5cb0f5cd9e12260b996f7bd1df0ca4f0)
- XEN\_DOMCTL\_get\_vcpu\_msrs : [domctl.h](public_2domctl_8h.md#a154eebe2a910f858f89599f1facda875)
- XEN\_DOMCTL\_getdomaininfo : [domctl.h](public_2domctl_8h.md#add13342f48d90679c9eb941834278cce)
- xen\_domctl\_getdomaininfo() : [domctl.h](dom0_2domctl_8h.md#a4848541359c3e13358dc39b42b3c142f)
- xen\_domctl\_getdomaininfo\_t : [domctl.h](public_2domctl_8h.md#a975bbf787336d78a2fe063f5f16766db)
- XEN\_DOMCTL\_gethvmcontext : [domctl.h](public_2domctl_8h.md#a985b6a69f7cb7da875026aed4552aa6a)
- XEN\_DOMCTL\_gethvmcontext\_partial : [domctl.h](public_2domctl_8h.md#a72b7300f5aeeba20c7cd3c3aba88e243)
- XEN\_DOMCTL\_getnodeaffinity : [domctl.h](public_2domctl_8h.md#afcf17d5e7402b39f32b6c7e21bcb0caa)
- XEN\_DOMCTL\_getpageframeinfo3 : [domctl.h](public_2domctl_8h.md#a9e543639c3b1bae35b54ca0e3ae18fcd)
- XEN\_DOMCTL\_gettscinfo : [domctl.h](public_2domctl_8h.md#ac0c8fe09ca02e3d19ffa2253ec56c36a)
- XEN\_DOMCTL\_getvcpuaffinity : [domctl.h](public_2domctl_8h.md#acd429b8834dc7284b33a66949c5b7ad0)
- XEN\_DOMCTL\_getvcpucontext : [domctl.h](public_2domctl_8h.md#af99e2f5c9a5b8a3ccd35a19961c0aa44)
- xen\_domctl\_getvcpucontext() : [domctl.h](dom0_2domctl_8h.md#a9040a9ddca3406adc057960b0f423bcd)
- XEN\_DOMCTL\_getvcpuextstate : [domctl.h](public_2domctl_8h.md#a20fcaf2b9a50516154f6664ecaba4310)
- XEN\_DOMCTL\_getvcpuinfo : [domctl.h](public_2domctl_8h.md#abff3d223bd31c6f9b888c1293d7eaeca)
- XEN\_DOMCTL\_GRANT\_version : [domctl.h](public_2domctl_8h.md#aa38abb4809db00cbe963bcb41d61950a)
- XEN\_DOMCTL\_GRANT\_version\_mask : [domctl.h](public_2domctl_8h.md#a6f5be8cef355d7bad22785dc29bd4dac)
- XEN\_DOMCTL\_hypercall\_init : [domctl.h](public_2domctl_8h.md#a131e1409d1d50a9ba638b194430fd63e)
- XEN\_DOMCTL\_INTERFACE\_VERSION : [domctl.h](public_2domctl_8h.md#a1af9bebb704ccbf97d9ec79d3d860f58)
- XEN\_DOMCTL\_iomem\_permission : [domctl.h](public_2domctl_8h.md#ad3775642e389867857b9c7d33922deaf)
- xen\_domctl\_iomem\_permission() : [domctl.h](dom0_2domctl_8h.md#a2a34701f55250140576e8c71607801f8)
- XEN\_DOMCTL\_IOMMU\_MAX : [domctl.h](public_2domctl_8h.md#ab2313d4fcb94c8e6473d67ce9607da48)
- XEN\_DOMCTL\_IOMMU\_no\_sharep : [domctl.h](public_2domctl_8h.md#a928664472460bf3656889afe3a381389)
- XEN\_DOMCTL\_ioport\_mapping : [domctl.h](public_2domctl_8h.md#a8dc90189fb09c0500ab9831a7304258b)
- XEN\_DOMCTL\_ioport\_permission : [domctl.h](public_2domctl_8h.md#ab00adfd7a0a99504c0d74fb9a730535e)
- XEN\_DOMCTL\_irq\_permission : [domctl.h](public_2domctl_8h.md#ab350564800ede51e81bd1efbe9d31433)
- XEN\_DOMCTL\_max\_mem : [domctl.h](public_2domctl_8h.md#abc8af7f11bc93e5e335bda2ba00e770a)
- xen\_domctl\_max\_mem() : [domctl.h](dom0_2domctl_8h.md#acbe8f22573487bcdb8612988da24b68e)
- XEN\_DOMCTL\_max\_vcpus : [domctl.h](public_2domctl_8h.md#ad32b3ac435a726f6eec3baa03e9d2cc6)
- xen\_domctl\_max\_vcpus() : [domctl.h](dom0_2domctl_8h.md#a8f954e5a7d1cd633c6d819780bb6372b)
- XEN\_DOMCTL\_mem\_sharing\_op : [domctl.h](public_2domctl_8h.md#a2144e180680f2862fb3c5c4242ab81d1)
- XEN\_DOMCTL\_memory\_mapping : [domctl.h](public_2domctl_8h.md#a087034256c26c23fe8aa430224ed4f5e)
- xen\_domctl\_memory\_mapping() : [domctl.h](dom0_2domctl_8h.md#ac945f3330b3b03112f3fa6fb49f42e50)
- XEN\_DOMCTL\_monitor\_op : [domctl.h](public_2domctl_8h.md#af006015d33d0097664f6a6020873a82c)
- XEN\_DOMCTL\_pausedomain : [domctl.h](public_2domctl_8h.md#a6fc2629c1e6c4e882609e7e0e8214af7)
- xen\_domctl\_pausedomain() : [domctl.h](dom0_2domctl_8h.md#aff200f6bfe2a31b536337f5bf668fee7)
- XEN\_DOMCTL\_psr\_alloc : [domctl.h](public_2domctl_8h.md#aad00fc3c420bef96edac0233ee94cd47)
- XEN\_DOMCTL\_psr\_cmt\_op : [domctl.h](public_2domctl_8h.md#ac27bce86ab62c437f2338a96f37a7d48)
- XEN\_DOMCTL\_real\_mode\_area : [domctl.h](public_2domctl_8h.md#afb2feb24f3113dc5b924aaddf9095c10)
- XEN\_DOMCTL\_resumedomain : [domctl.h](public_2domctl_8h.md#aca08972618f6a931a3dffd924072e7f0)
- xen\_domctl\_resumedomain() : [domctl.h](dom0_2domctl_8h.md#a50c40d73171240a047cf6e9b41898c99)
- XEN\_DOMCTL\_SCHEDOP\_getinfo : [domctl.h](public_2domctl_8h.md#a481dbdc86321a9f74ef259fad8d3da08)
- XEN\_DOMCTL\_SCHEDOP\_getvcpuinfo : [domctl.h](public_2domctl_8h.md#ad1db496f608988bae2fe8ef992416d9e)
- XEN\_DOMCTL\_SCHEDOP\_putinfo : [domctl.h](public_2domctl_8h.md#a82c49a3fe9250e1e9f3cc4d5f5a74dee)
- XEN\_DOMCTL\_SCHEDOP\_putvcpuinfo : [domctl.h](public_2domctl_8h.md#a6d6e95c97391261ef77dfbccf15de5ba)
- xen\_domctl\_schedparam\_vcpu\_t : [domctl.h](public_2domctl_8h.md#adfbd6c6d40e27f06e00d39acd5be271e)
- XEN\_DOMCTL\_SCHEDRT\_extra : [domctl.h](public_2domctl_8h.md#ae765249383b5fc2e83d1474ac49b4fbd)
- XEN\_DOMCTL\_scheduler\_op : [domctl.h](public_2domctl_8h.md#a4e16878f8f098d4e5033b3d9c7c4fc66)
- xen\_domctl\_scheduler\_op() : [domctl.h](dom0_2domctl_8h.md#a7045c1f92142eceefe3e4c651708beae)
- XEN\_DOMCTL\_sendtrigger : [domctl.h](public_2domctl_8h.md#a3f3aef1714b0d856bafe713ee9a0a096)
- XEN\_DOMCTL\_set\_access\_required : [domctl.h](public_2domctl_8h.md#a8e63ecac1fe62447de02590d81454c76)
- XEN\_DOMCTL\_set\_address\_size : [domctl.h](public_2domctl_8h.md#a3401578b5bb89676a5c5c2be96424ad7)
- xen\_domctl\_set\_address\_size() : [domctl.h](dom0_2domctl_8h.md#a8dee93295a86c5d7b586676a831e1047)
- XEN\_DOMCTL\_set\_broken\_page\_p2m : [domctl.h](public_2domctl_8h.md#af50563ae8af88f9de94f87986147f532)
- XEN\_DOMCTL\_set\_cpu\_policy : [domctl.h](public_2domctl_8h.md#ad537d2de47beed8d6f670a863a3d44d2)
- XEN\_DOMCTL\_set\_ext\_vcpucontext : [domctl.h](public_2domctl_8h.md#a0d0a882796436312ecede3dcfd9569f3)
- XEN\_DOMCTL\_set\_opt\_feature : [domctl.h](public_2domctl_8h.md#adde0cd9f0afc1545bce1e7efe257479b)
- XEN\_DOMCTL\_set\_paging\_mempool\_size : [domctl.h](public_2domctl_8h.md#ae35c3b2ead7567f169e79e786d2b915f)
- xen\_domctl\_set\_paging\_mempool\_size() : [domctl.h](dom0_2domctl_8h.md#a7f7c3789fb44574317d9c69ca56f1e1d)
- XEN\_DOMCTL\_set\_target : [domctl.h](public_2domctl_8h.md#a80d963c7a959b9116b27918bb19cce6b)
- XEN\_DOMCTL\_set\_vcpu\_msrs : [domctl.h](public_2domctl_8h.md#aa5227f853fed668e20d3c15a76278c1c)
- XEN\_DOMCTL\_set\_virq\_handler : [domctl.h](public_2domctl_8h.md#a3f56b7bdb2efe676716dca9a8303b502)
- XEN\_DOMCTL\_setdebugging : [domctl.h](public_2domctl_8h.md#a74047cd87a9608188c8412712f43d2f5)
- XEN\_DOMCTL\_setdomainhandle : [domctl.h](public_2domctl_8h.md#aab5cf53258ae8b11262e5f1b288537f7)
- XEN\_DOMCTL\_sethvmcontext : [domctl.h](public_2domctl_8h.md#a6ea99b9477c9e698af222cea8eef8103)
- XEN\_DOMCTL\_setnodeaffinity : [domctl.h](public_2domctl_8h.md#a64def50fd26a62692718f14d34ac5056)
- XEN\_DOMCTL\_settimeoffset : [domctl.h](public_2domctl_8h.md#a4d75d1a4982ead6f6b2066d562f3137b)
- XEN\_DOMCTL\_settscinfo : [domctl.h](public_2domctl_8h.md#a68f376046c9512b1ba0d536bf9f4da59)
- XEN\_DOMCTL\_setvcpuaffinity : [domctl.h](public_2domctl_8h.md#a52f4ddee28622818b0d0ad3a660782e4)
- XEN\_DOMCTL\_setvcpucontext : [domctl.h](public_2domctl_8h.md#a8fff7d4989f605f73dec55d59b10f5db)
- xen\_domctl\_setvcpucontext() : [domctl.h](dom0_2domctl_8h.md#a66505a6d47e0c5ef3334043c668d6740)
- XEN\_DOMCTL\_setvcpuextstate : [domctl.h](public_2domctl_8h.md#a95967323209e42eaf73b092c76c1ed8f)
- XEN\_DOMCTL\_setvnumainfo : [domctl.h](public_2domctl_8h.md#a33454734fa5e0f67818f763c0284bd0b)
- XEN\_DOMCTL\_shadow\_op : [domctl.h](public_2domctl_8h.md#ab310ee5729b47d317fb381ba4a7765b9)
- XEN\_DOMCTL\_SHADOW\_OP\_GET\_ALLOCATION : [domctl.h](public_2domctl_8h.md#ae4aefb0671418197673fc3055b3e1aa0)
- XEN\_DOMCTL\_SHADOW\_OP\_SET\_ALLOCATION : [domctl.h](public_2domctl_8h.md#ad48421566046507c9773c91e0349e77b)
- XEN\_DOMCTL\_soft\_reset : [domctl.h](public_2domctl_8h.md#aa33f73f1dda376298e235892d8322ba6)
- XEN\_DOMCTL\_subscribe : [domctl.h](public_2domctl_8h.md#a25286953a431e6f3172ef9a5f90d18e4)
- xen\_domctl\_t : [domctl.h](public_2domctl_8h.md#a739ed8d92302fb02b53f4f769d57d83e)
- XEN\_DOMCTL\_test\_assign\_device : [domctl.h](public_2domctl_8h.md#a71b8b60fc4a387b89b482f7c0ba6a24f)
- XEN\_DOMCTL\_unbind\_pt\_irq : [domctl.h](public_2domctl_8h.md#a4a5a18f97beae00c8df5a27e8f58630b)
- XEN\_DOMCTL\_unpausedomain : [domctl.h](public_2domctl_8h.md#a7f759b8eba89d5387e880f8aca7fd357)
- xen\_domctl\_unpausedomain() : [domctl.h](dom0_2domctl_8h.md#a89be676e7f2ff66b4dc195e35e374083)
- XEN\_DOMCTL\_vm\_event\_op : [domctl.h](public_2domctl_8h.md#a584b0146d9466c742cde954cf933a35e)
- XEN\_DOMCTL\_VMSI\_X86\_DELIV\_MASK : [domctl.h](public_2domctl_8h.md#ac8d90b0cceefc508e8a56e59d4fa5ce3)
- XEN\_DOMCTL\_VMSI\_X86\_DEST\_ID\_MASK : [domctl.h](public_2domctl_8h.md#ad94911a72ecc25f10b2a58bd3c1fc091)
- XEN\_DOMCTL\_VMSI\_X86\_DM\_MASK : [domctl.h](public_2domctl_8h.md#a2377d6a66411ba1ca2a314965ef8c7be)
- XEN\_DOMCTL\_VMSI\_X86\_RH\_MASK : [domctl.h](public_2domctl_8h.md#ad337d528c4d9eb777d7dd1a438a98dc8)
- XEN\_DOMCTL\_VMSI\_X86\_TRIG\_MASK : [domctl.h](public_2domctl_8h.md#a5ca26c5c2b596e10104119d44b8c6f9a)
- XEN\_DOMCTL\_VMSI\_X86\_UNMASKED : [domctl.h](public_2domctl_8h.md#a81cec14a8ea2e245bc664647e0bf70ab)
- XEN\_DOMCTL\_vmtrace\_op : [domctl.h](public_2domctl_8h.md#a9794dd91afdd16869e3a42b6b3239ecd)
- XEN\_DOMCTL\_vuart\_op : [domctl.h](public_2domctl_8h.md#a850fc8c65f70ad1ad1c9d000f94960ff)
- XEN\_DOMINF\_blocked : [domctl.h](public_2domctl_8h.md#a34e24b31aaadfd78c585a6187fc89187)
- XEN\_DOMINF\_debugged : [domctl.h](public_2domctl_8h.md#ade451ebb63161b5cdbfab6221cb9c4f0)
- XEN\_DOMINF\_dying : [domctl.h](public_2domctl_8h.md#afcdfc193f40faf980e2e23d485de4e79)
- XEN\_DOMINF\_hap : [domctl.h](public_2domctl_8h.md#a919137e7b6b084d368cca8766091754e)
- XEN\_DOMINF\_hvm\_guest : [domctl.h](public_2domctl_8h.md#a140d5075193daeba92f4b83a0c2f1e14)
- XEN\_DOMINF\_paused : [domctl.h](public_2domctl_8h.md#a32c611154d6e6bb3c3b5d4ac9cab5e65)
- XEN\_DOMINF\_running : [domctl.h](public_2domctl_8h.md#a7e0f50072c881ded1670fa4efda493e0)
- XEN\_DOMINF\_shutdown : [domctl.h](public_2domctl_8h.md#af49f7e9e048fafaa4ec004d46919d313)
- XEN\_DOMINF\_shutdownmask : [domctl.h](public_2domctl_8h.md#a8e242d887ef91743672a2a3ae3bd74f2)
- XEN\_DOMINF\_shutdownshift : [domctl.h](public_2domctl_8h.md#af3cfe05618c9a1bd3dbe48f42e7cea04)
- XEN\_DOMINF\_xs\_domain : [domctl.h](public_2domctl_8h.md#a37e263699b64912d80697a374d127796)
- xen\_events\_init() : [events.h](events_8h.md#af6542be4472fb2d1dc17deca6c323972)
- XEN\_FLEX\_ARRAY\_DIM : [xen.h](xen_8h.md#ae905e08d72e4466ea6a2ec669c3820e4)
- xen\_gfn\_to\_virt : [generic.h](generic_8h.md#ac5ffaa30256542b5e2ee53e5bf66dced)
- XEN\_GUEST\_HANDLE : [arch-arm.h](arch-arm_8h.md#a59eac5b471e486c9cdb4743017fdfc20)
- XEN\_GUEST\_HANDLE\_PARAM : [arch-arm.h](arch-arm_8h.md#a2d269ec4cb445d086e8fca4d4288f7ce)
- xen\_hvm\_param\_t : [hvm\_op.h](hvm__op_8h.md#af8a7ad2e0c2c0be2175f3fc396e41a0e)
- XEN\_HYPERCALL\_TAG : [arch-arm.h](arch-arm_8h.md#aa5e158f6f21dcc54391239d9ac71f32b)
- XEN\_INVALID\_MAX\_VCPU\_ID : [domctl.h](public_2domctl_8h.md#a40c471099d055910f5bed2994efec643)
- XEN\_LEGACY\_MAX\_VCPUS : [arch-arm.h](arch-arm_8h.md#a57246b966cc182f34ca4f9bfa101e449)
- xen\_memory\_reservation\_t : [memory.h](public_2memory_8h.md#a2328386982b62de8d81d891e257cab9b)
- xen\_mk\_uint : [xen.h](xen_8h.md#aa7b557e58ad4a375ce9dcccac60d7b14)
- xen\_mk\_ullong : [xen.h](xen_8h.md#ad58e92795b2f6c186afd2848e04e39ad)
- xen\_mk\_ulong : [xen.h](xen_8h.md#a81523e052b17db63279a60bef67924b4)
- XEN\_PAGE\_SHIFT : [generic.h](generic_8h.md#acbc96e1185d1c2fab047d87da44c0308)
- XEN\_PAGE\_SIZE : [generic.h](generic_8h.md#ab22c00daf7a13fcd6f71fd389fad3919)
- XEN\_PFN\_DOWN : [generic.h](generic_8h.md#a8d089e7267f000ef6ce2cf98939d0df2)
- XEN\_PFN\_PHYS : [generic.h](generic_8h.md#a0a87f9a4f97c5d40e583285fb97f97a0)
- xen\_pfn\_t : [arch-arm.h](arch-arm_8h.md#a564b8052e6905461f66db791246d2226)
- XEN\_PFN\_UP : [generic.h](generic_8h.md#a87e8ebaed995d91a2fd87f34e3a37843)
- XEN\_PHYS\_PFN : [generic.h](generic_8h.md#afffd6c194994740f2ad3f49dac48c6d3)
- xen\_pmu\_arch\_t : [arch-arm.h](arch-arm_8h.md#a9d6716569cd8ef7c541527df22dd767c)
- XEN\_PVCLOCK\_GUEST\_STOPPED : [xen.h](xen_8h.md#aa63ac2404dfad1ac4828f973623896e4)
- XEN\_PVCLOCK\_TSC\_STABLE\_BIT : [xen.h](xen_8h.md#a3b6486848b8f26f7ebbdb4b2ac0b6f0c)
- xen\_remove\_from\_physmap\_t : [memory.h](public_2memory_8h.md#a7ac5899f2de1e9d6d775142c9ee4616b)
- XEN\_SCHEDULER\_ARINC653 : [domctl.h](public_2domctl_8h.md#a08dbd46725afbad5fe54879c9d0518c1)
- XEN\_SCHEDULER\_CREDIT : [domctl.h](public_2domctl_8h.md#afee5561bd17af9ddba71e01697ee50d3)
- XEN\_SCHEDULER\_CREDIT2 : [domctl.h](public_2domctl_8h.md#a560830bf6e1c6a96fae85d6788fffc7c)
- XEN\_SCHEDULER\_NULL : [domctl.h](public_2domctl_8h.md#ac0f58da75c220a8afef88585628874f2)
- XEN\_SCHEDULER\_RTDS : [domctl.h](public_2domctl_8h.md#afaede03296414e2adaeed009bfd4d0e0)
- xen\_to\_phys : [generic.h](generic_8h.md#a171a7e1bdc51851bf22c6f33d99a66d5)
- xen\_to\_virt : [generic.h](generic_8h.md#a00320c3072ff8655017aa8e28367e864)
- xen\_ulong\_t : [arch-arm.h](arch-arm_8h.md#a9dd3dbb4741d391e0fff3f0e7d55cccc)
- xen\_virt\_to\_gfn : [generic.h](generic_8h.md#aea05f25a15fca2bf161790935426e406)
- xen\_wc\_sec\_hi : [xen.h](xen_8h.md#a9b01f685c203d17ebf84b1452d6c13fe)
- XENCONS\_RING\_IDX : [console.h](xen_2public_2io_2console_8h.md#aa49f8668886bc6a29fee54402474f068)
- xenctl\_bitmap\_t : [xen.h](xen_8h.md#a0b13d295ad2c74398b3430177ca6267a)
- xendom\_add\_to\_physmap() : [memory.h](memory_8h.md#ab548b9bcc4479f33f3d8b8467dc6855f)
- xendom\_add\_to\_physmap\_batch() : [memory.h](memory_8h.md#ad3a6f591da88d9781fd08c197a7f933b)
- xendom\_populate\_physmap() : [memory.h](memory_8h.md#a7fe2ce11ffa483afa33d95b7cf61520b)
- xendom\_remove\_from\_physmap() : [memory.h](memory_8h.md#ae4c9930819726c7ce77725649c03dedf)
- XENMAPIDX\_grant\_table\_status : [memory.h](public_2memory_8h.md#a203b04fe93d4686b1c12337bc3973747)
- XENMAPSPACE\_dev\_mmio : [memory.h](public_2memory_8h.md#acb4d47c69fee4afe3c722cb6ee8d61b6)
- XENMAPSPACE\_gmfn : [memory.h](public_2memory_8h.md#a5675ec2efeed7e5c40dda7483b10d569)
- XENMAPSPACE\_gmfn\_foreign : [memory.h](public_2memory_8h.md#a565fab9b43c0a1be2866b9aa934841ba)
- XENMAPSPACE\_gmfn\_range : [memory.h](public_2memory_8h.md#a2c34663ef8ef5bd369e2d73520649e50)
- XENMAPSPACE\_grant\_table : [memory.h](public_2memory_8h.md#ad115b9759532e6d0358cc704409c6270)
- XENMAPSPACE\_shared\_info : [memory.h](public_2memory_8h.md#a4369cb99e8d27ca45dc163373d103309)
- XENMEM\_add\_to\_physmap : [memory.h](public_2memory_8h.md#a1475409f6e69603d9797b94efc148b4d)
- XENMEM\_add\_to\_physmap\_batch : [memory.h](public_2memory_8h.md#a7d95089177a14df927c60432925acbfa)
- XENMEM\_populate\_physmap : [memory.h](public_2memory_8h.md#a6ec885dfced1bae6da54202b3d63ecaf)
- XENMEM\_remove\_from\_physmap : [memory.h](public_2memory_8h.md#a684c3081ab104b422ea40c68fc421c1c)
- xfer\_direction : [pcie\_ep.h](pcie__ep_8h.md#acd2605f2fb5676ded5f125712681d458)
- XLNX\_GEM\_AMBA\_AHB\_BURST\_INCR16 : [xlnx\_gem.h](xlnx__gem_8h.md#af53fba620b18e599bef91a544b638ef1)
- XLNX\_GEM\_AMBA\_AHB\_BURST\_INCR4 : [xlnx\_gem.h](xlnx__gem_8h.md#a18db46b4e0826fe2b0ba2de2f198c41d)
- XLNX\_GEM\_AMBA\_AHB\_BURST\_INCR8 : [xlnx\_gem.h](xlnx__gem_8h.md#aaf8ecbfd760ae236aad17ce5ff0ddd91)
- XLNX\_GEM\_AMBA\_AHB\_BURST\_SINGLE : [xlnx\_gem.h](xlnx__gem_8h.md#a2ea757d44f3110a20113acb4673bcf43)
- XLNX\_GEM\_AMBA\_AHB\_DBUS\_WIDTH\_128BIT : [xlnx\_gem.h](xlnx__gem_8h.md#a0f60f82ee244fd2522e00a1b897f7d49)
- XLNX\_GEM\_AMBA\_AHB\_DBUS\_WIDTH\_32BIT : [xlnx\_gem.h](xlnx__gem_8h.md#a45ebc16715ede38f89977f402c29a55f)
- XLNX\_GEM\_AMBA\_AHB\_DBUS\_WIDTH\_64BIT : [xlnx\_gem.h](xlnx__gem_8h.md#ac73d8a83557499aec09b759e578e6878)
- XLNX\_GEM\_HW\_RX\_BUFFER\_SIZE\_1KB : [xlnx\_gem.h](xlnx__gem_8h.md#a9089698903ed9087cc077b6f8b71716e)
- XLNX\_GEM\_HW\_RX\_BUFFER\_SIZE\_2KB : [xlnx\_gem.h](xlnx__gem_8h.md#a7b05fe3ebab46720d425de07fcdb4e59)
- XLNX\_GEM\_HW\_RX\_BUFFER\_SIZE\_4KB : [xlnx\_gem.h](xlnx__gem_8h.md#adec908c6be1fde115f7b5b2317f7e49f)
- XLNX\_GEM\_HW\_RX\_BUFFER\_SIZE\_8KB : [xlnx\_gem.h](xlnx__gem_8h.md#a3782b31ebb12c7c18fe1ae2d1d71525c)
- XLNX\_GEM\_LINK\_SPEED\_100MBIT : [xlnx\_gem.h](xlnx__gem_8h.md#a9ca8d8dcb4dc9acee911a501b7578f30)
- XLNX\_GEM\_LINK\_SPEED\_10MBIT : [xlnx\_gem.h](xlnx__gem_8h.md#a36088d09ca9962a60a92988b1a24b129)
- XLNX\_GEM\_LINK\_SPEED\_1GBIT : [xlnx\_gem.h](xlnx__gem_8h.md#a3ab42595d945a7a83be47a6693b8b5f2)
- XLNX\_GEM\_MDC\_DIVIDER\_128 : [xlnx\_gem.h](xlnx__gem_8h.md#ac0c4600967372762d6c331f050900812)
- XLNX\_GEM\_MDC\_DIVIDER\_16 : [xlnx\_gem.h](xlnx__gem_8h.md#a2dd7b7b6960988c9adda4e6bb9104d3b)
- XLNX\_GEM\_MDC\_DIVIDER\_224 : [xlnx\_gem.h](xlnx__gem_8h.md#afe8f02554a5ec893f1c5aaf9a67e8406)
- XLNX\_GEM\_MDC\_DIVIDER\_32 : [xlnx\_gem.h](xlnx__gem_8h.md#a39223a666570e19229337c37affec28a)
- XLNX\_GEM\_MDC\_DIVIDER\_48 : [xlnx\_gem.h](xlnx__gem_8h.md#ab161bdaf20281af805fe256aa1420965)
- XLNX\_GEM\_MDC\_DIVIDER\_64 : [xlnx\_gem.h](xlnx__gem_8h.md#a299bad98c83526e02e9cbc7b1e20c3e8)
- XLNX\_GEM\_MDC\_DIVIDER\_8 : [xlnx\_gem.h](xlnx__gem_8h.md#aecfc16f895d5904bb88865654192b6af)
- XLNX\_GEM\_MDC\_DIVIDER\_96 : [xlnx\_gem.h](xlnx__gem_8h.md#a903826e931e2f98859a52f3abd6746a5)
- XLNX\_GEM\_PHY\_AUTO\_DETECT : [xlnx\_gem.h](xlnx__gem_8h.md#a6f1dc25e8cf23705674ad0bf8a3dd607)
- XMC4XXX\_ALT\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#aba9bea82a961c304cb90a7c24527d531)
- XMC4XXX\_ALT\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a532151552d5ea717d093deb4c9c9d233)
- XMC4XXX\_DMA\_GET\_LINE : [infineon-xmc4xxx-dma.h](infineon-xmc4xxx-dma_8h.md#a27d5d96c050301bfc22b52fe7f5483db)
- XMC4XXX\_DMA\_GET\_REQUEST\_SOURCE : [infineon-xmc4xxx-dma.h](infineon-xmc4xxx-dma_8h.md#a7545b103c79e582bec92c59571c2aee5)
- XMC4XXX\_DMA\_LINE\_MASK : [infineon-xmc4xxx-dma.h](infineon-xmc4xxx-dma_8h.md#a6675bcb092ce91d47fa5b47142ca45f4)
- XMC4XXX\_DMA\_LINE\_POS : [infineon-xmc4xxx-dma.h](infineon-xmc4xxx-dma_8h.md#a770a813125a4338de8e409d4c9056c16)
- XMC4XXX\_DMA\_REQUEST\_SOURCE\_MASK : [infineon-xmc4xxx-dma.h](infineon-xmc4xxx-dma_8h.md#a4df66f182189c3ae0983cdbbf9ae441c)
- XMC4XXX\_DMA\_REQUEST\_SOURCE\_POS : [infineon-xmc4xxx-dma.h](infineon-xmc4xxx-dma_8h.md#a3c4acabda14da40580e0a2b27ee65460)
- XMC4XXX\_DRIVE\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#aa6829bced6bf9f7908e31fb3c9205f93)
- XMC4XXX\_DRIVE\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#ac8284e39124ff71b5335e46e56fb8000)
- XMC4XXX\_GPIO\_DS\_MASK : [infineon-xmc4xxx-gpio.h](infineon-xmc4xxx-gpio_8h.md#a766a7c07cd178b9373fec28745b1e077)
- XMC4XXX\_GPIO\_DS\_MEDIUM : [infineon-xmc4xxx-gpio.h](infineon-xmc4xxx-gpio_8h.md#af725ddf9a1dfaf02d478cdcf94132a24)
- XMC4XXX\_GPIO\_DS\_POS : [infineon-xmc4xxx-gpio.h](infineon-xmc4xxx-gpio_8h.md#a0204cbd6c151fcea59199b1c4e007eaf)
- XMC4XXX\_GPIO\_DS\_STRONG\_MEDIUM\_EDGE : [infineon-xmc4xxx-gpio.h](infineon-xmc4xxx-gpio_8h.md#a6a21bcff48f4e8a4acede963a534fb95)
- XMC4XXX\_GPIO\_DS\_STRONG\_SHARP\_EDGE : [infineon-xmc4xxx-gpio.h](infineon-xmc4xxx-gpio_8h.md#ab820bfc6577c45c88b59260531d078d3)
- XMC4XXX\_GPIO\_DS\_STRONG\_SLOW\_EDGE : [infineon-xmc4xxx-gpio.h](infineon-xmc4xxx-gpio_8h.md#aa81ddd8894b2f3a1e991b5d95ac81a7f)
- XMC4XXX\_GPIO\_DS\_STRONG\_SOFT\_EDGE : [infineon-xmc4xxx-gpio.h](infineon-xmc4xxx-gpio_8h.md#a07e14898ba2a322edf9729054832c1a9)
- XMC4XXX\_GPIO\_DS\_WEAK : [infineon-xmc4xxx-gpio.h](infineon-xmc4xxx-gpio_8h.md#a5c307c3181d3094cadb68766b318b3e5)
- XMC4XXX\_GPIO\_GET\_DS : [infineon-xmc4xxx-gpio.h](infineon-xmc4xxx-gpio_8h.md#a52bb9df6ed1e4ead550ceefe1b96a5b3)
- XMC4XXX\_HWCTRL\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a0fc560c059b8fabf8e811e81783f5e2a)
- XMC4XXX\_HWCTRL\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a80e80262f3abb20055891211ee43201a)
- XMC4XXX\_INTC\_ERU\_SRC\_MASK : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#a95edfadbd314bf4ea27d88b1dce66e35)
- XMC4XXX\_INTC\_ERU\_SRC\_POS : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#a9b1fa99740e6196ae816c3d89eaf8588)
- XMC4XXX\_INTC\_GET\_ERU\_SRC : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#afe9fae2864cfa87bc9a458c24d6bdc5e)
- XMC4XXX\_INTC\_GET\_LINE : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#a7ff570440afc268c833d4991c58792d2)
- XMC4XXX\_INTC\_GET\_PIN : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#a415130dd3eeae518bb469122bfb44223)
- XMC4XXX\_INTC\_GET\_PORT : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#a908ab6f538ea2a135d002b9c4d9bdea0)
- XMC4XXX\_INTC\_LINE\_MASK : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#a2cae357860189d1b94dce0ee4a3867e0)
- XMC4XXX\_INTC\_LINE\_POS : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#aa20a96b7bec4cbbf75cf879cf448a379)
- XMC4XXX\_INTC\_PIN\_MASK : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#aa8feb63e6eb01cbc5b9226ffdc499f0f)
- XMC4XXX\_INTC\_PIN\_POS : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#aa5617e14917f6cedae4ab8db3eafa250)
- XMC4XXX\_INTC\_PORT\_MASK : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#a0874a1bfc7a1590132fb5802fb490791)
- XMC4XXX\_INTC\_PORT\_POS : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#ab656d7c0db9ceac360de0e3bb11e05c8)
- XMC4XXX\_INTC\_SET\_LINE\_MAP : [infineon-xmc4xxx-intc.h](infineon-xmc4xxx-intc_8h.md#ac7cbe5628158a8852ea3ea8fafd4e2b1)
- XMC4XXX\_INV\_INPUT\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#aab423e91fbddbe908d9393447ff943f0)
- XMC4XXX\_INV\_INPUT\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a2da9db848ad0c85751747df0f3948f97)
- XMC4XXX\_OPEN\_DRAIN\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a4dbdbb0b4fe95db634c55b7840a08a47)
- XMC4XXX\_OPEN\_DRAIN\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#ad8da22497d5f36d3cd56477506eca3b5)
- XMC4XXX\_OUT\_HIGH\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a58396a809d6950afd8b5cc6fd4193589)
- XMC4XXX\_OUT\_HIGH\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#ada9fafd51a6d8e7e6b4f2b05bf2d3dd0)
- XMC4XXX\_OUT\_LOW\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#af8c9d1c2e5664ff59538c08b4ed8fa8b)
- XMC4XXX\_OUT\_LOW\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#abbac18ae6e6d52b33db5b352ca323e11)
- XMC4XXX\_PIN\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a693fe19f7d6073121d89c4bd6dbff99b)
- XMC4XXX\_PIN\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a511179d787ebfbb7f37a92326d4a8984)
- XMC4XXX\_PINMUX\_GET\_ALT : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#afdad7ccafbdee5a2b1d512f0e280abfe)
- XMC4XXX\_PINMUX\_GET\_DRIVE : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a11bd50351e3aabed088cc4158474edc3)
- XMC4XXX\_PINMUX\_GET\_HWCTRL : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a33694b664b4212d95cc18659173675c0)
- XMC4XXX\_PINMUX\_GET\_INV\_INPUT : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a43ce0d809351bef0989f0330073f9453)
- XMC4XXX\_PINMUX\_GET\_OPEN\_DRAIN : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a57626f3b88704a87ed5f9bfba44c8daf)
- XMC4XXX\_PINMUX\_GET\_OUT\_HIGH : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a1de2bc4e89167d9a0399edf63078d928)
- XMC4XXX\_PINMUX\_GET\_OUT\_LOW : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#abbeef6122d273c9f074fb1cc5456febf)
- XMC4XXX\_PINMUX\_GET\_PIN : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a3d889d7f75a6b88b252cb13f3004ea6a)
- XMC4XXX\_PINMUX\_GET\_PORT : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#ae0748e6dbb9ca36ad0ab40e3a53daea2)
- XMC4XXX\_PINMUX\_GET\_PULL\_DOWN : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a56ebba3de971f70ad47005cf0a5246c1)
- XMC4XXX\_PINMUX\_GET\_PULL\_UP : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#ac28a73b740da97d7d0008ab0af577a92)
- XMC4XXX\_PINMUX\_GET\_PUSH\_PULL : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a376e85562e0dc5a1ea2c9f3b8eaeeb9e)
- XMC4XXX\_PINMUX\_SET : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a30211ecff4f4b6b3f02386ae55d1cb8d)
- XMC4XXX\_PORT\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a99aa017fa346da406fca137d0c42c1e4)
- XMC4XXX\_PORT\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#aab30618ebe31012b3bf6a72d55f9335c)
- XMC4XXX\_PULL\_DOWN\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#ac202c2ad9b97865b1d7f9d282c9a7d10)
- XMC4XXX\_PULL\_DOWN\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#ac6ec7a70bdaae2909baea4f179327871)
- XMC4XXX\_PULL\_UP\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#ac165407103a525da4919fee7c4dc22c9)
- XMC4XXX\_PULL\_UP\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a87e81f7624a28d5fea5ad3a2074329a0)
- XMC4XXX\_PUSH\_PULL\_MASK : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a308fe5c756b2058b2eec25d9e95d439a)
- XMC4XXX\_PUSH\_PULL\_POS : [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md#a9f50c28d310a0cc771b979e731c05060)
- XMC4XXX\_SET\_CONFIG : [infineon-xmc4xxx-dma.h](infineon-xmc4xxx-dma_8h.md#afa54bae091f586404ae79cfa97db6d36)
- XSPI1\_SEL : [stm32h7rs\_clock.h](stm32h7rs__clock_8h.md#a15df14366d6921bac34208b0c1af0ebb)
- XSPI2\_SEL : [stm32h7rs\_clock.h](stm32h7rs__clock_8h.md#a58f2e1e8be7e4e9b50783f03afc687ff)
- XSPI\_DTR\_TRANSFER : [xspi.h](xspi_8h.md#a779d385b42986b752d93b0de74b52015)
- XSPI\_DUAL\_MODE : [xspi.h](xspi_8h.md#a6b13657beb90f13af580a7ffce42af33)
- XSPI\_OCTO\_MODE : [xspi.h](xspi_8h.md#a31cb4ace810add7d7b9bd9b18114f83e)
- XSPI\_QUAD\_MODE : [xspi.h](xspi_8h.md#a707d8a21a2b53d6b9d5ccbcb830bec39)
- XSPI\_SPI\_MODE : [xspi.h](xspi_8h.md#af46f316833f2edf8ad528c2247050f7b)
- XSPI\_STR\_TRANSFER : [xspi.h](xspi_8h.md#aaba9227de2cc14e8e8215391c8e8d569)
- XT32KHz\_P14 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#ad6896d2b4627a39b85ce426e045d55f9)
- XT32KHz\_P24 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#aca95921548c6549fa9b40d0584389037)
- XT32KHz\_P33 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a40417407993ffd2e917262ae286e0b8d)
- XT32KHz\_P36 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a48be8de8a03a7a27a7848c64adb97665)
- XT32KHZ\_P37 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a1e80ca77d6b1b6474a8a8995ba882dff)
- XT32KHZ\_P4 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ad00e0aa91708b761cc5d65e5419273a8)
- XT32KHZ\_P45 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a508cfcad47c0b4eceac816703569af1e)
- XT32KHz\_P47 : [ambiq-apollo3-pinctrl.h](ambiq-apollo3-pinctrl_8h.md#a55e6549b3ba1beca7ae1db93b7f809ee)
- XT32KHZ\_P64 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a445a906a3797a052225c6034214dfe3d)
- XT32KHZ\_P65 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a90c257cc7e3c833d282e1deb95ffd4c1)
- XT32KHZ\_P69 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ab4597feb25612a79db1d271c15ea5a64)
- XT32KHZ\_P70 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#adc16088791f6cfac9094ea7b1541c1fe)
- XT32KHZ\_P75 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a6ad643261b65f7d941abda1f46f44773)
- XT32KHZ\_P76 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a2051e97aa7c29746bc79cc6c069255d7)
- XT32KHZ\_P82 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a6155820134a9cac0de16e4d2bd4c7870)
- XT32KHZ\_P83 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ad2320c1a312f5cb681ee8f0db3dd9e2e)
- XT\_EXT\_P27 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a5acb2c796482e9b513ef217e23a18242)
- XTALIN\_PIO2\_0 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#a5f3bfb1721c59d5800bcdf187dbddeb1)
- XTALOUT\_PIO2\_1 : [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md#a8c1b112e94052158ccefdda7c023d9e0)
- xtensa\_arch\_except() : [arch.h](xtensa_2arch_8h.md#a789f894256925071f3448cda889abcf5)
- xtensa\_arch\_kernel\_oops() : [arch.h](xtensa_2arch_8h.md#a31f0ccadfc2a2afa0e985d74a0e4c2e9)
- xtensa\_cas() : [atomic\_xtensa.h](atomic__xtensa_8h.md#a44f4f8164c1db8c54a93d36cb0457339)
- xtensa\_irq\_disable() : [irq.h](arch_2xtensa_2irq_8h.md#a37d1c0641f471e9492c2493c77327c96)
- xtensa\_irq\_enable() : [irq.h](arch_2xtensa_2irq_8h.md#a9d6c92219fd2390f777aff106d2eafa9)
- xtensa\_irq\_is\_enabled() : [irq.h](arch_2xtensa_2irq_8h.md#ae6e10f2a35e679c41c11700330ce8b7a)
- xtensa\_mem\_partition\_is\_executable() : [mpu.h](group__xtensa__mpu__apis.md#gab1af4356d315b9db663cd11d65a66a91)
- xtensa\_mem\_partition\_is\_writable() : [mpu.h](group__xtensa__mpu__apis.md#ga41efdfe8839c52b3f2c1aec03c17e59a)
- XTENSA\_MMU\_CACHED\_WB : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#gad45f01becd63452801d0ec1889f366ae)
- XTENSA\_MMU\_CACHED\_WT : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#gaf103854e82190435afc12cc6e84b91fc)
- xtensa\_mmu\_init() : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#ga4647e8c6102df87952ca82b76f3c13a5)
- XTENSA\_MMU\_MAP\_SHARED : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#gaf3036aabe1539acf75d72f8f8e4eb123)
- XTENSA\_MMU\_MAP\_USER : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#ga37dfdbbf3a5830d0745944d9e1668da1)
- XTENSA\_MMU\_PERM\_W : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#ga485ae34d7a65229418abb6019a9be5df)
- XTENSA\_MMU\_PERM\_WX : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#ga4193becf070dca661418f9d57516ae15)
- XTENSA\_MMU\_PERM\_X : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#ga0583957e9dcbf2c85154ac8994e14b3a)
- xtensa\_mmu\_reinit() : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#gab6335d894a19734cab891fa85919a123)
- xtensa\_mmu\_tlb\_ipi() : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#gad1cf0320ec5ebd2936b7141582f99004)
- xtensa\_mmu\_tlb\_shootdown() : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#ga4aacd525656e5e12063785d6e51c71aa)
- XTENSA\_MPU\_ACCESS\_P\_NA\_U\_NA : [mpu.h](group__xtensa__mpu__apis.md#gaf961b245ca7818f754c7162319efa197)
- XTENSA\_MPU\_ACCESS\_P\_NA\_U\_X : [mpu.h](group__xtensa__mpu__apis.md#ga6d73b17148096bf132eda0083d1ea924)
- XTENSA\_MPU\_ACCESS\_P\_RO\_U\_NA : [mpu.h](group__xtensa__mpu__apis.md#ga164fd2142e9804ef65dda8930f6fc849)
- XTENSA\_MPU\_ACCESS\_P\_RO\_U\_RO : [mpu.h](group__xtensa__mpu__apis.md#ga840b2bd13d49212c3334d7137523f16c)
- XTENSA\_MPU\_ACCESS\_P\_RW\_U\_NA : [mpu.h](group__xtensa__mpu__apis.md#ga04d4edd823a1ace779c3f1f036c2f2e2)
- XTENSA\_MPU\_ACCESS\_P\_RW\_U\_RO : [mpu.h](group__xtensa__mpu__apis.md#ga42641dfd4809bd38ef6ace8d757f9e24)
- XTENSA\_MPU\_ACCESS\_P\_RW\_U\_RW : [mpu.h](group__xtensa__mpu__apis.md#ga4cce80414ae35dc45260c6a5e5dc4582)
- XTENSA\_MPU\_ACCESS\_P\_RW\_U\_RWX : [mpu.h](group__xtensa__mpu__apis.md#ga7fa9272228eb0ffc7455cfc671a23459)
- XTENSA\_MPU\_ACCESS\_P\_RWX\_U\_NA : [mpu.h](group__xtensa__mpu__apis.md#gaf00699a52e155c8b22aabf979e020109)
- XTENSA\_MPU\_ACCESS\_P\_RWX\_U\_RWX : [mpu.h](group__xtensa__mpu__apis.md#ga41a662ee819f702fc9030ee7f40dbbe6)
- XTENSA\_MPU\_ACCESS\_P\_RWX\_U\_RX : [mpu.h](group__xtensa__mpu__apis.md#ga1abe9e7d4f8929518b8287619ea5754d)
- XTENSA\_MPU\_ACCESS\_P\_RX\_U\_NA : [mpu.h](group__xtensa__mpu__apis.md#ga8de59e1ff974516355606efde2e00fb9)
- XTENSA\_MPU\_ACCESS\_P\_RX\_U\_RX : [mpu.h](group__xtensa__mpu__apis.md#gae47e13ff73f39d819b97f311a7f53dcd)
- XTENSA\_MPU\_ACCESS\_P\_WO\_U\_WO : [mpu.h](group__xtensa__mpu__apis.md#ga2c10985c0c74a2690e9f093d5815d9d9)
- XTENSA\_MPU\_ACCESS\_P\_X\_U\_NA : [mpu.h](group__xtensa__mpu__apis.md#gaf323d5434ff922f485fe80a86c2c1b44)
- xtensa\_mpu\_init() : [mpu.h](group__xtensa__mpu__apis.md#ga20524255a2b4713eddb70b8a54357771)
- XTENSA\_MPU\_NUM\_ENTRIES : [mpu.h](group__xtensa__mpu__apis.md#gae63365117939d9460202c55cf006cb7a)
- XTENSA\_RSR : [arch\_inlines.h](xtensa_2arch__inlines_8h.md#ad745bdf9b93a9019a1d373e9f50a35e5)
- XTENSA\_RUR : [arch\_inlines.h](xtensa_2arch__inlines_8h.md#aa297de6c2736557e7076e496ce25ec23)
- xtensa\_soc\_mmu\_ranges : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#gaf61e45b5fd46c1bf38d5172d7f27f2f3)
- xtensa\_soc\_mmu\_ranges\_num : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#ga57a61711ec5a6613304469392f33c749)
- xtensa\_soc\_mpu\_ranges : [mpu.h](group__xtensa__mpu__apis.md#gade19640c9ba5da25451b9200b4e9178b)
- xtensa\_soc\_mpu\_ranges\_num : [mpu.h](group__xtensa__mpu__apis.md#ga4b838edd5ce1332432083bd20ca7abc1)
- xtensa\_user\_fault() : [arch.h](xtensa_2arch_8h.md#a0890b1717c7f7b93644c69a3293b7da8)
- xtensa\_vecbase\_lock() : [arch.h](xtensa_2arch_8h.md#ac14ee42f2f373cf48fa30a60f3aafc39)
- XTENSA\_WSR : [arch\_inlines.h](xtensa_2arch__inlines_8h.md#a319bd616dfbeb56398294bcb9f7a0fdd)
- XTENSA\_WUR : [arch\_inlines.h](xtensa_2arch__inlines_8h.md#a22be7315733dd413f1c3253faa2e78da)
- XTREG\_GRP\_ADDR : [gdbstub.h](arch_2xtensa_2gdbstub_8h.md#a4ce12c698d17a8e67b11392362a2a7b8)
- XTREG\_GRP\_GENERAL : [gdbstub.h](arch_2xtensa_2gdbstub_8h.md#a6c4b0ec6ff50d409949b3eb675101fa9)
- XTREG\_GRP\_MASK : [gdbstub.h](arch_2xtensa_2gdbstub_8h.md#a6d8520d58f7d4a35a8d747a2ea2b8b2e)
- XTREG\_GRP\_SPECIAL : [gdbstub.h](arch_2xtensa_2gdbstub_8h.md#a9cebc8c3e734ccb3997757018014b3e3)
- XTREG\_GRP\_USER : [gdbstub.h](arch_2xtensa_2gdbstub_8h.md#a1b75ea49d7031c3d9b334dcf636727ca)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.7.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
